# fwife

./: AUTHORS  ChangeLog  Makefile.am  README  TODO  autoclean.sh  autogen.sh  configure.ac
data/: Makefile.am
data/desktop/: Makefile.am  fwife-kde.desktop  fwife.desktop
data/images/: Makefile.am
data/images/flags/: Makefile.am  cs_CZ  da_DK  de_DE  en_CA  en_GB  en_US  es_ES  fi_FI  fr_BE  fr_CA  fr_FR  he_IL  hu_HU  id_ID  it_IT  lv_LV  nl_NL  pl_PL  pt_BR  pt_PT  ro_RO  ru_RU  sk_SK  sv_SE  th_TH  tr_TR  zh_CN
data/kmconf/: Makefile.am  tr
data/scripts/: Makefile.am  xkeybchange
po/: Makevars  POTFILES.in
src/: .gitignore  Makefile.am  fwife-message.c  fwife-message.h  fwife.c  fwife.h  util.c  util.h
src/plugins/: Makefile.am  asklang.c  common.h  configsource-discs.c  configsource-network.c  configsource.c  finish.c  greet.c  grubconf.c  install.c  layout.c  netconf.c  partdisk.c  postconf.c  rootconf.c  select-basic.c  select-expert.c  select-intermediate.c  select.c  timeconf.c  usersconf.c
