desktopdir = $(datadir)/applications/
image16dir = $(datadir)/icons/hicolor/16x16/apps/
image22dir = $(datadir)/icons/hicolor/22x22/apps/
image24dir = $(datadir)/icons/hicolor/24x24/apps/
image32dir = $(datadir)/icons/hicolor/32x32/apps/
image48dir = $(datadir)/icons/hicolor/48x48/apps/
image64dir = $(datadir)/icons/hicolor/64x64/apps/
image128dir = $(datadir)/icons/hicolor/128x128/apps/

desktop_DATA = fwife.desktop \
                fwife-kde.desktop        
image16_DATA = 16x16/fwife.png
image22_DATA = 22x22/fwife.png
image24_DATA = 24x24/fwife.png
image32_DATA = 32x32/fwife.png
image48_DATA = 48x48/fwife.png
image64_DATA = 64x64/fwife.png
image128_DATA = 128x128/fwife.png
