SUBDIRS = flags
imagesdir = $(pkgdatadir)/images/

images_DATA = 	adduser.png \
		clean.png \
		deluser.png \
		gnomelogo.png \
		gparted.png \
		headlogo.png \
		home.png \
		kdelogo.png \
		key24.png \
		key48.png \
		lxdelogo.png \
		packet.png \
		swap.png \
		timemap.png \
		user.png \
		wifi.png \
		xfcelogo.png
	      
