SUBDIRS = flags
imagesdir = $(pkgdatadir)/images/

images_DATA = 	adduser.png \
		clean.png \
		deluser.png \
		gnomelogo.png \
		gparted.png \
		headlogo.png \
		home.png \
		kdelogo.png \
		key24.png \
		key48.png \
		lxdelogo.png \
		package.png \
		swap.png \
		timemap.png \
		user.png \
		wifi.png \
		xfcelogo.png \
		e17logo.png	\
		configure24.png \
		xorg48.png \
		mouse48.png \
		dsl24.png \
		signal-25.png \
		signal-50.png \
		signal-75.png \
		signal-100.png \
		kde4desktop.png \
		gnomedesktop.png \
		xfcedesktop.png \
		lxdedesktop.png \
		nox.png \
		tree.png
